chore: add swagger docs endpoint
